fix invalid yaml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,27 +5,28 @@ on:
     branches:
       - master
 
-build_push:
-  runs-on: ubuntu-latest
-  steps:
-  - name: login to heroku registry
-    run: echo "logging in to heroku registry"
-    env:
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-    run: heroku container:login  
-  - name: build and push
-    run: echo "build the image and push it to the heroku registry"
-    env:
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-    run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
-
-release:
-  runs-on: ubuntu-latest
-  needs: build_and_push
-  steps:
-    - name: release
-      run: echo "release the image to the heroku app"
+jobs:
+  build_push:
+    runs-on: ubuntu-latest
+    steps:
+    - name: login to heroku registry
+      run: echo "logging in to heroku registry"
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+      run: heroku container:login  
+    - name: build and push
+      run: echo "build the image and push it to the heroku registry"
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
+      - name: release
+        run: echo "release the image to the heroku app"
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
 
