use checkout action to access repository code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: login to heroku registry
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
